@@ -21,6 +21,8 @@ dpkg (1.18.5) UNRELEASED; urgency=medium
   * Clarify where to find the GPL-2 license in debian/copyright.
   * Do not enable stack-protector on nios2 in Debian and derivatives (it is
     not supported by gcc yet).
+  * Check first for build type to short-circuit boolean expressions in
+    dpkg-genchanges.
   * Perl modules:
     - Add new CTRL_REPO_RELEASE control block type to Dpkg::Control.
     - Add new CTRL_COPYRIGHT_HEADER, CTRL_COPYRIGHT_FILES and
